[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/cover/CoverObject.gd" type="Script" id=1]
[ext_resource path="res://game/cover/CoverObjects.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46, 22 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 41 )

[node name="CoverObject" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
offset = Vector2( -64, -101 )
vframes = 10
hframes = 10

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 1, -19 )
shape = SubResource( 1 )

[node name="CoverArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoverArea"]
position = Vector2( 1, -25 )
shape = SubResource( 2 )

[connection signal="body_entered" from="CoverArea" to="." method="_on_CoverArea_body_entered"]
[connection signal="body_exited" from="CoverArea" to="." method="_on_CoverArea_body_exited"]
